Fixed emailme link z-index

--- a/main.sass
+++ b/main.sass
@@ -77,6 +77,7 @@ nobr
     max-width: $max-width
     margin: 0 auto
     text-align: right
+    z-index: 100
 
 section
     padding-bottom: 2.5em
